brat/test/golden/error/pass.brat
-- Pass can't be used in the left of a juxtaposition because it consumes all
-- remaining wires. There's nothing left after "pass" for the next thing to
-- check againsaxst
f(Nat, Bool) -> Nat, Bool
f = { pass, (x => x) }
