brat/test/golden/error/pass.brat.golden
Error in test/golden/error/pass.brat@FC {start = Pos {line = 5, col = 13}, end = Pos {line = 5, col = 21}}:
f = { pass, (x => x) }
            ^^^^^^^^

  Nothing to bind to: x

